[package]
name = "rmv-bevy-testing-tools"
version = "0.9.0"
edition = "2024"
license = "MIT"
description = "Write simple tests for bevy systems, using rstest, insta, and speculoos."
readme = "Readme.md"
repository = "https://github.com/rmvermeulen/rmv-bevy-testing-tools"

[features]
# provides the `TestApp` and it's traits
default = []
# everything, for convenience
all = ["insta", "rstest", "speculoos", "itertools", "traits"]
full = ["all"]
# exports `set_snapshot_suffix!()` to allow parameterized tests to use snapshots
insta = ["dep:insta"]
# provides some baseline `TestApp`-fixtures
rstest = [
    "dep:rstest",
    "dep:rstest_reuse",
    "dep:bevy_pbr",
    "dep:bevy_render",
    "dep:bevy_state",
    "dep:bevy_asset",
    "dep:bevy_image",
    "dep:bevy_shader",
    "dep:bevy_mesh",
]
# provides `IsContainedIn::is_contained_in` extension
speculoos = ["dep:speculoos"]
# add `ImmediateQuery::query_vec` for convenience
itertools = ["dep:itertools", "trait_query"]
# provides all traits
traits = [
    "trait_manage_state",
    "trait_write_messages",
    "trait_collect_messages",
    "trait_query",
]
trait_manage_state = ["dep:bevy_state", "rstest"]
trait_write_messages = ["dep:bevy_ecs", "rstest"]
trait_collect_messages = ["dep:bevy_ecs", "rstest"]
trait_query = ["dep:bevy_ecs", "rstest"]

[dependencies]
bevy_app = { version = "^0.18.0-rc.1", default-features = false }
bevy_asset = { version = "^0.18.0-rc.1", optional = true }
bevy_derive = { version = "^0.18.0-rc.1", default-features = false }
bevy_ecs = { version = "^0.18.0-rc.1", optional = true }
bevy_image = { version = "^0.18.0-rc.1", optional = true }
bevy_internal = { version = "^0.18.0-rc.1", default-features = false }
bevy_mesh = { version = "^0.18.0-rc.1", optional = true }
bevy_pbr = { version = "^0.18.0-rc.1", optional = true }
bevy_render = { version = "^0.18.0-rc.1", default-features = false, optional = true }
bevy_shader = { version = "^0.18.0-rc.1", optional = true }
bevy_state = { version = "^0.18.0-rc.1", optional = true }
bevy_utils = { version = "^0.18.0-rc.1", default-features = false }
bevy_window = { version = "^0.18.0-rc.1" }
insta = { version = "^1.45", optional = true }
itertools = { version = "^0.14.0", optional = true }
konst = "0.4"
rstest = { version = "^0.26", optional = true }
rstest_reuse = { version = "^0.7.0", optional = true }
speculoos = { version = "^0.13.0", optional = true }
static_assertions = { version = "1.1.0", features = ["nightly"] }

[dev-dependencies]
bevy = { version = "^0.18.0-rc.1", default-features = false, features = [
    "bevy_shader",
    "bevy_render",
    "bevy_state",
] }
bevy_ecs = { version = "^0.18.0-rc.1", default-features = false }
insta = "1.45.1"
rmv-bevy-testing-tools = { path = ".", features = ["rstest"] }
rstest = "^0.26.1"
rstest_reuse = "~0.7.0"
speculoos = "^0.13.0"

[build-dependencies]
rustversion = "^1.0.22"

[package.metadata.cargo-feature-combinations]
exclude_features = [
    "default",
    "all",
    "full",
    "trait_manage_state",
    "trait_write_messages",
    "trait_collect_messages",
    "trait_query",
]
